--- a/styles.css
+++ b/styles.css
@@ -10,17 +10,16 @@ body {
   
   .container {
     max-width: 600px;
-    margin: 50px auto;
+    margin: 0 auto;
     background: rgba(255, 255, 255, 0.9);
-    border-radius: 10px;
-    padding: 20px;
+    padding: 0;
+    min-height: 100vh;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
   }
   
-  h1 {
-    text-align: center;
-    margin-bottom: 20px;
-  }
+ 
   
   ul {
     list-style-type: square;
@@ -29,10 +28,14 @@ body {
     margin-left: 20px;
   }
   
-  li {
-    margin: 10px 0;
-    padding: 15px;
+  #band li {
+    margin-bottom:  0;
+    padding: 20px;
     background: #f9f9f9;
+    border-top: none;
+    margin-top: 0;
+    
    
   }
+  
   
